Fixed gaussian blurring of digits

--- a/visulisation/visulisation_preprocessing.ipynb
+++ b/visulisation/visulisation_preprocessing.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "residential-visiting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "printable-jackson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "heavy-battle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dried-minnesota",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "handed-captain",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "underlying-techno",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sublime-swing",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +167,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "solved-flood",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "wired-cherry",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "mechanical-warner",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "trained-syria",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupational-consultation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
