--- a/visulisation/preprocessing.ipynb
+++ b/visulisation/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train clean images\n",
-    "train = pd.read_csv('C:/Users/joele/OneDrive/CMIC hackathon/mnist_train.csv')\n",
+    "train = pd.read_csv('C:/Users/joele/OneDrive/CMIC hackathon/data/train/mnist_train.csv')\n",
     "images = train.iloc[:,1:]\n",
     "images = images.values / 255.\n",
     "images = np.reshape(images, (-1, 1, 28, 28))\n",
-    "np.save('C:/Users/joele/OneDrive/CMIC hackathon/train/raw.npy', images)"
+    "np.save('C:/Users/joele/OneDrive/CMIC hackathon/data/train/raw.npy', images)"
    ]
   },
   {
