--- a/visulisation/preprocessing_paw.ipynb
+++ b/visulisation/preprocessing_paw.ipynb
@@ -244,29 +244,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove(digit, x, y):\n",
     "    idx = (y != digit).nonzero()\n",
-    "    return x[idx], y[idx], idx"
+    "    return idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "#train_no3, labels_train_no3 = remove(3, train, labels_train)\n",
     "n_cut = 4\n",
-    "train_cut, labels_train_cut, idx_cut = remove(n_cut, train, train_csv.iloc[:,0].values)"
+    "idx_cut = remove(n_cut, train, train_csv.iloc[:,0].values)\n",
+    "train_cut = train[idx_cut]\n",
+    "labels_train_cut = labels_train[idx_cut]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
        "(54158, 1, 28, 28)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,16 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(54158,)"
+       "(54158, 1, 28, 28)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
